--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
+<!-- [if IE 8]>
+<html class="lt-ie10 lt-ie9 no-js" prefix="og: http://ogp.me/ns#" lang="pt-br"><![endif]>-->
+<!-- [if IE 9]>
+<html class="lt-ie10 no-js" prefix="og: http://ogp.me/ns#" lang="pt-br"><![endif]>-->
+<!-- [if gt IE 9]><!-->
 <html class="js pc fonts-loaded wf-proximanova-n9-active wf-brandongrotesque-n1-active wf-brandongrotesque-n3-active wf-ptserif-i4-active wf-proximanova-n1-active wf-proximanova-n5-active wf-proximanova-i3-active wf-firasans-n3-active wf-proximanova-n6-active wf-brandongrotesque-i9-active wf-brandongrotesque-n7-active wf-brandongrotesque-i1-active wf-brandongrotesque-n9-active wf-firasans-i3-active wf-proximanova-i7-active wf-firasans-n5-active wf-brandongrotesque-i3-active wf-ptserif-n4-active wf-brandongrotesque-i4-active wf-brandongrotesque-n5-active wf-proximanova-i8-active wf-brandongrotesque-n4-active wf-brandongrotesque-i5-active wf-ptserif-n7-active wf-proximanova-i5-active wf-proximanova-n8-active wf-proximanova-i6-active wf-ptserif-i7-active wf-proximanova-n7-active wf-proximanova-i4-active wf-proximanova-n4-active wf-brandongrotesque-i7-active wf-proximanova-i9-active wf-proximanova-i1-active wf-proximanova-n3-active wf-firasans-i5-active wf-active"
       prefix="og: http://ogp.me/ns#" lang="pt-br"><!--<![endif]-->
+<!-- <![endif]> -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
