Ajustando erro de português

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                                                             <li>Compatibilização de todos os projetos envolvidos;<br>
                                                             </li>
                                                             <li>Compatibilização em todas as fases do projeto,
-                                                                indempedente da ferramenta utilizada (BIM ou não);
+                                                                independente da ferramenta utilizada (BIM ou não);
                                                             </li>
                                                         </ul>
                                                     </div>
