Ajustando erro de português

--- a/index.html
+++ b/index.html
@@ -723,10 +723,10 @@
                                                         Edificação</h3>
 
                                                         <ul>
-                                                            <li>Gerenciamentode todos os projetos;<br></li>
+                                                            <li>Gerenciamento de todos os projetos;<br></li>
                                                             <li>Gerenciamento e controle das informações;</li>
                                                             <li>Elaboração e acompanhamento de cronogramas;</li>
-                                                            <li>Ferramentas específica de gestão para controle dos
+                                                            <li>Ferramentas específicas de gestão para controle dos
                                                                 projetos;
                                                             </li>
                                                             <li>Reuniões técnicas com os projetistas;</li>
@@ -755,7 +755,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="text cf design-01">
-                                                    <div class="text-content"><h3>Compatibilização Projetos
+                                                    <div class="text-content"><h3>Compatibilização de Projetos
                                                         Arquitetônicos</h3>
 
                                                         <ul>
@@ -917,7 +917,7 @@
                                                 locais:</p>
                                             <ul>
                                                 <li>MAENA DESIGNCONECTA - Gerente de Projetos 2015 à 2017</li>
-                                                <li>PREFEITURA MUNICIPAL DE GUAÍVA - Arquiteta Servidora Pública da
+                                                <li>PREFEITURA MUNICIPAL DE GUAÍBA - Arquiteta Servidora Pública da
                                                     Secretaria Municipal de Planejamento - 2012 à 2014
                                                 </li>
                                             </ul>
