--- a/index.html
+++ b/index.html
@@ -723,46 +723,38 @@
                                                         Edificação</h3>
 
                                                         <ul>
-                                                            <li>Gerenciamento de todos os projetos;<br></li>
-                                                            <li>Gerenciamento e controle das informações;</li>
-                                                            <li>Elaboração e acompanhamento de cronogramas;</li>
-                                                            <li>Ferramentas específicas de gestão para controle dos
-                                                                projetos;
+                                                            <li>Elaboração
+                                                                do Plano de Gerenciamento de Projeto específico para
+                                                                cada tipo de edificação;<br></li>
+                                                            <li>Definição
+                                                                do escopo do Projeto;
                                                             </li>
-                                                            <li>Reuniões técnicas com os projetistas;</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-
-                                            </div>
-                                            <div class="mt-column cf">
-
-                                                <div class="image image-default block wnd-orientation-landscape wnd-type-image"
-                                                     style="margin-left:32.99%;margin-right:32.99%;"
-                                                     id="wnd_ImageBlock_10006">
-                                                    <div class="image-content cf"
-                                                         style="padding-bottom:115.66%;text-align:center;">
-                                                        <img src="http://files.hsl-arquitetura2.webnode.com/200000008-3c06c3cffc/450/Compatibiliza%C3%A7%C3%A3o.jpg"
-                                                             alt=""
-                                                             style="top:0%;left:0%;width:100%;height:auto;position:absolute;">
-                                                        <div class="embed-content">
-                                                        </div>
-
-                                                        <div class="image-title">
-                                                            <span class="title-text"></span>
-                                                            <span class="title-overlay"></span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="text cf design-01">
-                                                    <div class="text-content"><h3>Compatibilização de Projetos
-                                                        Arquitetônicos</h3>
-
-                                                        <ul>
-                                                            <li>Compatibilização de todos os projetos envolvidos;<br>
+                                                            <li>Coordenação
+                                                                multidisciplinar de toda a equipe envolvida;
                                                             </li>
-                                                            <li>Compatibilização em todas as fases do projeto,
-                                                                independente da ferramenta utilizada (BIM ou não);
+                                                            <li>Coordenação
+                                                                e gerenciamento das reuniões de equipe;
+                                                            </li>
+                                                            <li>Gerenciamento
+                                                                de todas as informações do projeto;
+                                                            </li>
+                                                            <li>Controle
+                                                                quantitativo e qualitativo das entregas dos projetistas;
+                                                            </li>
+                                                            <li>Elaboração
+                                                                e controle de cronograma do projeto;
+                                                            </li>
+                                                            <li>Administração
+                                                                do software de gerenciamento de arquivos;
+                                                            </li>
+                                                            <li>Gerenciamento
+                                                                de interferência;
+                                                            </li>
+                                                            <li>Compatibilização
+                                                                do projeto em todas as etapas do processo;
+                                                            </li>
+                                                            <li>Reunião
+                                                                final de feedback;
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -793,13 +785,15 @@
                                                         Arquitetura</h3>
 
                                                         <ul>
-                                                            <li class="wnd-align-justify">Projeto Executivo de
-                                                                Arquitetura desenvolvido em Revit;<br></li>
-                                                            <li class="wnd-align-justify">Projeto Executivo em
-                                                                Autocad;
-                                                            </li>
+                                                            <li class="wnd-align-justify">Projetos Executivos de
+                                                                Arquitetura;<br></li>
                                                             <li class="wnd-align-justify">Detalhamentos Construtivos de
-                                                                Arquitetura;
+                                                                Arquitetura;<br></li>
+                                                            <li class="wnd-align-justify">Desenvolvimento dos projetos
+                                                                em ferramentas BIM;
+                                                            </li>
+                                                            <li class="wnd-align-justify">Desenvolvimento de projetos em
+                                                                Autocad;
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -1097,7 +1091,8 @@
                                                     </div>
                                                     <div class="text cf design-01">
                                                         <div class="text-content"><p><b>Stand de Vendas GrandPark</b> -
-                                                            Melnick/Maena - Projeto Executivo de Arquitetura - 2016</p>
+                                                            Melnick/Maena - Projeto Executivo de Arquitetura&nbsp; e
+                                                            Acompanhamento de Obra- 2016</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1124,7 +1119,7 @@
                                                     <div class="text cf design-01">
                                                         <div class="text-content"><p><b>Stand de Vendas LINKED
                                                             Teresópolis</b> - Melnick/Maena - Projeto Executivo de
-                                                            Arquitetura - 2017</p>
+                                                            Arquitetura e Acompanhamento de Obra - 2017</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1170,8 +1165,8 @@
                                                     <div class="text cf design-01">
                                                         <div class="text-content"><p><b>Retrofit Hall Edifício
                                                             Formac</b> - HSL Arquitetura/ABC Arquitetura - Projeto de
-                                                            Arquitetura de Interiores Condominial, projeto executivo e
-                                                            fiscalização da execução da obra - 2010</p>
+                                                            Arquitetura de Interiores Condominial, Projeto Executivo e
+                                                            Fiscalização da execução da obra - 2010</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1248,64 +1243,34 @@
                             <div class="section-bg-layer section-bg-overlay"></div>
                         </div>
                         <div class="section-inner">
-                            <div class="content cf">
+                            <div class="content cf wnd-no-cols">
                                 <div>
                                     <div class="text cf design-01">
                                         <div class="text-content"><h1>Contato</h1>
                                         </div>
                                     </div>
-                                    <div class="column-wrapper cf">
-                                        <div>
-                                            <div class="column-content pr-0 pr-320 pr-365 pr-480 pr-600"
-                                                 style="width:57%;">
-                                                <div>
-                                                    <div class="map block design-01 map-01"
-                                                         style="margin-left:0%;margin-right:0%;">
-                                                        <div class="map-content" id="wnd_MapBlock_56257_container"
-                                                             style="position:relative;padding-bottom:54.87%;">
-                                                            <iframe src="http://web-1007.webnode.com.ve/widgets/googlemaps/?z=15&amp;a=Rua+Joaquim+Nabuco%2C+110%2C+Porto+alegre&amp;s=LcwxCsAgDEbhu2QuQlfP0U0cHH6LkGpJ0kHEu9dC5-_xwqCMZI_g6DfIk0mqWsxxqaCNwLhQ7ccT7YJJd7kwL1XrDFHyYZB-l2Sl1RXuNOOMLw.."
-                                                                    style="position:absolute;top:0%;left:0%;width:100%;height:100%;"></iframe>
-                                                        </div>
+                                    <div class="mt mt-contact-03 cf">
+                                        <div class="cf">
+                                            <div class="contact-item cf">
+                                                <div class="text cf design-01">
+                                                    <div class="text-content"><p>Telefone:</p>
+
+                                                        <h3>51 981-91.91.08</h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="column-content pr-0 pr-320 pr-365" style="width:42%;">
-                                                <div>
-                                                    <div class="mt mt-contact-03 cf">
-                                                        <div class="cf">
-                                                            <div class="contact-item cf">
-                                                                <div class="text cf design-01">
-                                                                    <div class="text-content"><p>Endereço:</p>
+                                            <div class="contact-item cf">
+                                                <div class="text cf design-01">
+                                                    <div class="text-content"><p>E-mail:</p>
 
-                                                                        <h3>Rua Joaquim Nabuco, 110/401, Porto
-                                                                            Alegre/RS</h3>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="contact-item cf">
-                                                                <div class="text cf design-01">
-                                                                    <div class="text-content"><p>Telefone:</p>
-
-                                                                        <h3>51 981-91.91.08</h3>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="contact-item cf">
-                                                                <div class="text cf design-01">
-                                                                    <div class="text-content"><p>E-mail:</p>
-
-                                                                        <h3>hsl.arquitetura@gmail.com</h3>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="contact-item cf">
-                                                                <div class="text cf design-01">
-                                                                    <div class="text-content"><p>Linkedin:</p>
-                                                                        <p>Helena Sander Lopes</p>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+                                                        <h3>hsl.arquitetura@gmail.com</h3>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="contact-item cf">
+                                                <div class="text cf design-01">
+                                                    <div class="text-content"><p>Linkedin:</p>
+                                                        <p>Helena Sander Lopes</p>
                                                     </div>
                                                 </div>
                                             </div>
