Adicionando links para Linkedin, telefone e e-mail

--- a/index.html
+++ b/index.html
@@ -1190,23 +1190,23 @@
                                             <div class="contact-item cf">
                                                 <div class="text cf design-01">
                                                     <div class="text-content"><p>Telefone:</p>
-
+                                                        <a style="border: 0;" href="tel:051981919108">
                                                         <h3>51 981-91.91.08</h3>
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="contact-item cf">
                                                 <div class="text cf design-01">
                                                     <div class="text-content"><p>E-mail:</p>
-
-                                                        <h3>hsl.arquitetura@gmail.com</h3>
+                                                        <a style="border: 0;" href="mailto:hsl.arquitetura@gmail.com"><h3>hsl.arquitetura@gmail.com</h3></a>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="contact-item cf">
                                                 <div class="text cf design-01">
                                                     <div class="text-content"><p>Linkedin:</p>
-                                                        <p>Helena Sander Lopes</p>
+                                                        <p><a style="border: 0;" href="https://www.linkedin.com/in/helena-sander-lopes-97b6682a/">Helena Sander Lopes</a></p>
                                                     </div>
                                                 </div>
                                             </div>
