--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>HSL Arquitetura e Gestão</title>
+    <title>HSL Arquitetura e Gestão a</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="msapplication-tap-highlight" content="no">
     <link href="http://static-cdn2-w2.webnode.com/files/0q/0qj/0qjkz3.css?ph=3e48b568c0" rel="stylesheet">
