--- a/index.html
+++ b/index.html
@@ -882,18 +882,12 @@
                                     </div>
                                     <div class="column-wrapper cf">
                                         <div>
-                                            <div class="column-content pr-0 pr-320" style="width:33%;">
+                                            <div class="column-content pr cf pr-0" style="width:30%;">
                                                 <div>
-                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image"
-                                                         style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_9879">
-                                                        <div class="image-content cf"
-                                                             style="padding-bottom:58.85%;text-align:center;">
-                                                            <img src="http://files.hsl-arquitetura2.webnode.com/200000012-be724bf6c3/450/igua%C3%A7u.jpg"
-                                                                 alt=""
-                                                                 style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
-                                                            <div class="embed-content">
-                                                            </div>
-
+                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_3642">
+                                                        <div class="zimage-content cf" style="padding-bottom:64.5%;text-align:center;">
+                                                            <img src="https://hsl-arquitetura2.webnode.com/_files/200000023-f2e4df3e01/450/esporte.jpg" alt="" style="top:-1.69%;left:0%;width:100%;height:103.37078651685%;position:absolute;">
+                                                            <div class="embed-content"></div>
                                                             <div class="image-title">
                                                                 <span class="title-text"></span>
                                                                 <span class="title-overlay"></span>
@@ -901,26 +895,64 @@
                                                         </div>
                                                     </div>
                                                     <div class="text cf design-01">
-                                                        <div class="text-content"><p><b>Edifício Iguaçu</b> -
-                                                            Smart/Maena - Projeto Executivo de Interiores Condominiais -
-                                                            2016/2017</p>
+                                                        <div class="text-content"><p>it's Esportes e Eventos - Projeto Arquitetônico, Projeto Executivo de Arquitetura, Coordenação e Compatibilização de Projetos - 2017/2018</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_9879">
+                                                        <div class="image-content cf" style="padding-bottom:58.85%;text-align:center;">
+                                                            <img src="https://hsl-arquitetura2.webnode.com/_files/200000012-be724bf6c3/450/igua%C3%A7u.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
+                                                            <div class="embed-content"></div>
+                                                            <div class="image-title">
+                                                                <span class="title-text"></span>
+                                                                <span class="title-overlay"></span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="text cf design-01">
+                                                        <div class="text-content"><p><b>Edifício Iguaçu</b> - Smart/Maena - Projeto Executivo de Interiores Condominiais - 2016/2017</p></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="column-content pr cf pr-0 pr-320 pr-365" style="width:35%;">
+                                                <div>
+                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_63961">
+                                                        <div class="image-content cf" style="padding-bottom:56.25%;text-align:center;">
+                                                            <img src="https://hsl-arquitetura2.webnode.com/_files/200000024-52c3653b75/450/01.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
+                                                            <div class="embed-content"></div>
+                                                            <div class="image-title">
+                                                                <span class="title-text"></span>
+                                                                <span class="title-overlay"></span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="text cf design-01">
+                                                        <div class="text-content"><p>Engefitas - Burger Arquitetos - Coordenação e compatibilização de projetos - 2018</p></div>
+                                                    </div>
+                                                    <div class="text cf design-01">
+                                                        <div class="text-content"></div>
+                                                    </div>
+                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_30912">
+                                                        <div class="image-content cf" style="padding-bottom:56.38%;text-align:center;">
+                                                            <img src="https://hsl-arquitetura2.webnode.com/_files/200000013-27b0d28adb/450/gramado%20exclusive.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
+                                                            <div class="embed-content"></div>
+                                                            <div class="image-title">
+                                                                <span class="title-text"></span>
+                                                                <span class="title-overlay"></span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="text cf design-01">
+                                                        <div class="text-content"><p><b>Gramado Exclusive Resort</b> - Gramado Parks/Maena - Projeto Executivo de Interiores Condominiais - 2016/2017</p>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="column-content pr-0 pr-320" style="width:33%;">
+                                            <div class="column-content pr cf pr-0 pr-320" style="width:33%;">
                                                 <div>
-                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image"
-                                                         style="margin-left:0;margin-right:0;"
-                                                         id="wnd_ImageBlock_30912">
-                                                        <div class="image-content cf"
-                                                             style="padding-bottom:56.38%;text-align:center;">
-                                                            <img src="http://files.hsl-arquitetura2.webnode.com/200000013-27b0d28adb/450/gramado%20exclusive.jpg"
-                                                                 alt=""
-                                                                 style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
-                                                            <div class="embed-content">
-                                                            </div>
-
+                                                    <div class="image image-default block wnd-orientation-square wnd-type-image" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_41923">
+                                                        <div class="image-content cf" style="padding-bottom:61%;text-align:center;">
+                                                            <img src="https://hsl-arquitetura2.webnode.com/_files/200000025-308de31879/450/0.png" alt="" style="top:-31.97%;left:0%;width:100%;height:163.93442622951%;position:absolute;">
+                                                            <div class="embed-content"></div>
                                                             <div class="image-title">
                                                                 <span class="title-text"></span>
                                                                 <span class="title-overlay"></span>
@@ -928,26 +960,12 @@
                                                         </div>
                                                     </div>
                                                     <div class="text cf design-01">
-                                                        <div class="text-content"><p><b>Gramado Exclusive Resort</b> -
-                                                            Gramado Parks/Maena - Projeto Executivo de Interiores
-                                                            Condominiais - 2016/2017</p>
-                                                        </div>
+                                                        <div class="text-content"><p>Dongwon Canoas - Burger Arquitetos - Projeto Arquitônico, Projeto Executivo, Projeto Legal e Compatibilização de Projetos - 2017/2018</p></div>
                                                     </div>
-                                                </div>
-                                            </div>
-                                            <div class="column-content pr-0 pr-320" style="width:33%;">
-                                                <div>
-                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image"
-                                                         style="margin-left:0;margin-right:0;"
-                                                         id="wnd_ImageBlock_86309">
-                                                        <div class="image-content cf"
-                                                             style="padding-bottom:55.56%;text-align:center;">
-                                                            <img src="http://files.hsl-arquitetura2.webnode.com/200000014-b85a1b9543/450/blue.jpeg"
-                                                                 alt=""
-                                                                 style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
-                                                            <div class="embed-content">
-                                                            </div>
-
+                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_86309">
+                                                        <div class="image-content cf" style="padding-bottom:52.23%;text-align:center;">
+                                                            <img src="https://hsl-arquitetura2.webnode.com/_files/200000014-b85a1b9543/450/blue.jpeg" alt="" style="top:-3.08%;left:0%;width:100%;height:106.15711252654%;position:absolute;">
+                                                            <div class="embed-content"></div>
                                                             <div class="image-title">
                                                                 <span class="title-text"></span>
                                                                 <span class="title-overlay"></span>
@@ -955,9 +973,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="text cf design-01">
-                                                        <div class="text-content"><p><b>Blue Xangri-lá </b>-
-                                                            Melnick-Arcádia/Maena - Projeto Executivo Arquitetônico das
-                                                            Áreas Condominiais - 2015/2017</p>
+                                                        <div class="text-content"><p><b>Blue Xangri-lá </b>- Melnick-Arcádia/Maena - Projeto Executivo Arquitetônico das Áreas Condominiais - 2015/2017</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -965,7 +981,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </section>
